<resources>
    <string name="app_name">Live</string>

    <string name="bottom_nv_live">直播</string>
    <string name="bottom_nv_home">首页</string>
    <string name="bottom_nv_me">我的</string>

    <string name="login_btn_login">登录</string>
    <string name="login_btn_registered">注册</string>

    <string name="me_tv_user_nick">昵称</string>
    <string name="me_tv_gender">性别</string>
    <string name="me_tv_birthday">生日</string>
    <string name="me_tv_job">职业</string>
    <string name="me_tv_address">地址</string>
    <string name="me_tv_introduce">简介</string>
    <string name="me_tv_live_introduce">直播简介</string>
    <string name="me_btn_logout">退出登录</string>
    <string name="me_btn_login">登录</string>
    <string name="me_tv_recharge">充值</string>
    <string name="me_tv_withdraw">提现</string>
    <string name="me_tv_record">记录</string>

    <string name="home_tv_title">热门精选</string>

    <string name="room_dialog_et_room_name">直播间</string>
    <string name="room_dialog_et_room_introduction">简介</string>
    <string name="room_dialog_btn_confirm">确认</string>
    <string name="room_dialog_btn_cancel">取消</string>
    <string name="room_dialog_sw_advance">高级设置</string>
    <string name="room_dialog_camera">摄像头</string>
    <string name="room_dialog_camera_back">后置</string>
    <string name="room_dialog_camera_front">前置</string>
    <string name="room_dialog_resolution">分辨率</string>
    <string name="room_dialog_bit_rate">比特率（kb/s）</string>
    <string name="room_dialog_et_bit_rate_default">800000</string>
    <string name="room_dialog_frame_rate">帧率（fps）</string>
    <string name="room_dialog_rate_control">码率控制</string>
    <string name="room_dialog_profile">画质</string>
    <string name="room_dialog_sample_rate">采样率（Hz）</string>
    <string name="room_dialog_advance_video_param">视频参数</string>
    <string name="room_dialog_audio_param">音频参数</string>
    <string name="room_dialog_channel_config">声道</string>
    <string name="room_dialog_acc_type">ACC编码类型</string>
    <string name="room_dialog_et_frame_rate_default">10</string>

    <!--watch-->
    <string name="watch_tv_attention">关注</string>
    <string name="watch_tv_get_off">取关</string>
    <string name="chat_tv_send">发送</string>


    <string name="gift_dialog_title">送礼物</string>
    <string name="money_dialog_tv_title_recharge">充值</string>
    <string name="money_dialog_tv_title_withdraw">提现</string>
    <string name="money_dialog_tv_yuan">元</string>
    <string name="money_dialog_tv_amount">金额：</string>
    <string name="money_dialog_btn_cancel">取消</string>
    <string name="money_dialog_btn_confirm">确定</string>
    <string name="money_dialog_tv_send_gift">送礼物</string>
    <string name="money_dialog_tv_receive_gift">收礼物</string>
    <string name="money_dialog_tv_recharge">充值</string>
    <string name="money_dialog_tv_withdraw">提现</string>
    <string name="money_record_dialog_title">余额记录</string>

    <string name="alter_text_dialog_tv_nick">修改昵称</string>
    <string name="alter_text_dialog_tv_job">修改职业</string>
    <string name="alter_text_dialog_tv_introduce">修改简介</string>
    <string name="alter_text_dialog_tv_live_introduce">修改直播简介</string>

    <string name="alter_gender_dialog_tv_gender">修改性别</string>
    <string name="alter_dialog_rb_male">男</string>
    <string name="alter_dialog_rb_female">女</string>
    <string name="attention_title">关注主播</string>


</resources>
